force-app/main/default/objects/Dog_Facts__c/Dog_Facts__c.object-meta.xml
<CustomObject>
    <label>Dog Facts</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dog Facts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>