force-app/main/default/objects/Dog_Facts__c/fields/bred_for__c.field-meta.xml
<CustomField>
    <fullName>bred_for__c</fullName>
    <label>bred_for</label>
    <length>200</length>
    <type>Text</type>
</CustomField>