force-app/main/default/objects/Dog_Facts__c/fields/breed_group__c.field-meta.xml
<CustomField>
    <fullName>breed_group__c</fullName>
    <label>breed_group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>