force-app/main/default/objects/Dog_Facts__c/fields/hypoallergenic__c.field-meta.xml
<CustomField>
    <fullName>hypoallergenic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hypoallergenic</label>
    <type>Checkbox</type>
</CustomField>