force-app/main/default/objects/Dog_Facts__c/fields/life_span__c.field-meta.xml
<CustomField>
    <fullName>life_span__c</fullName>
    <label>life_span</label>
    <length>200</length>
    <type>Text</type>
</CustomField>