force-app/main/default/objects/Dog_Facts__c/fields/min_life__c.field-meta.xml
<CustomField>
    <fullName>min_life__c</fullName>
    <label>min_life</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>