force-app/main/default/objects/Dog_Facts__c/fields/origin__c.field-meta.xml
<CustomField>
    <fullName>origin__c</fullName>
    <label>origin</label>
    <length>200</length>
    <type>Text</type>
</CustomField>