force-app/main/default/objects/Dog_Facts__c/fields/reference_image_id__c.field-meta.xml
<CustomField>
    <fullName>reference_image_id__c</fullName>
    <label>reference_image_id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>