force-app/main/default/objects/Dog_Facts__c/fields/temperament__c.field-meta.xml
<CustomField>
    <fullName>temperament__c</fullName>
    <label>temperament</label>
    <length>255</length>
    <type>Text</type>
</CustomField>