force-app/main/default/objects/Dog_Facts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>breed_group__c</columns>
    <columns>origin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>